WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256351
(macOS) Several `fast/scrolling` layout tests are failing
https://bugs.webkit.org/show_bug.cgi?id=256351
Summary
(macOS) Several `fast/scrolling` layout tests are failing
Richard Robinson
Reported
2023-05-04 22:12:39 PDT
rdar://108931777
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-05-04 22:19:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13482
EWS
Comment 2
2023-05-15 17:35:27 PDT
Committed
264093@main
(8f64a049e501): <
https://commits.webkit.org/264093@main
> Reviewed commits have been landed. Closing PR #13482 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug