(macOS) Several keyboard scrolling `fast/scrolling` layout tests are failing https://bugs.webkit.org/show_bug.cgi?id=256351 rdar://108931777

Reviewed by Ryosuke Niwa.

Several layout tests have been starting to fail. Fix by:
1. Ensuring `ScrollAnimatorEnabled` is enabled
2. Fixing a typo to ensure the scroll deferrer works properly
3. Ensure a rendering update occurs between key down events and key up events

* LayoutTests/fast/scrolling/arrow-key-scroll-in-rtl-document.html:
* LayoutTests/fast/scrolling/keyboard-scrolling-distance-downArrow.html:
* LayoutTests/fast/scrolling/mac/keyboard-scrolling-terminates.html:
* Source/WebCore/platform/ScrollingEffectsController.cpp:
(WebCore::ScrollingEffectsController::scrollAnimationDidEnd):

Canonical link: https://commits.webkit.org/264093@main